--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>This is my first github page</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>Yes this is FUN</h1>
+    <header>
+      my picture goes here
+      <div class="callout">
+        <h1>yann espinasse</h1>
+        <p>Hello I am Yann Espinasse</p>
+
+      </div>
+    </header>
+
+    <section class="section1">
+      Bio
+
+    </section>
+    <section class="section2">
+      compétences
+
+    </section>
+    <section class="section3">
+      portfolio
+
+    </section>
+    <footer> contact infos</footer>
   </body>
 </html>
