code-avancement-CSS

--- a/index.html
+++ b/index.html
@@ -1,33 +1,103 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+
     <meta charset="utf-8">
     <title>This is my first github page</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
       <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body>
-    <header>
-      my picture goes here
-      <div class="callout">
-        <h1>yann espinasse</h1>
-        <p>Hello I am Yann Espinasse</p>
 
-      </div>
+
+  </head>
+
+
+    <nav class="menu menu--adsila">
+      <a class="menu__item" href="#section1">
+        <span class="menu__item-name">PARCOURS</span>
+
+      </a>
+      <a class="menu__item" href="#section2">
+        <span class="menu__item-name">COMPETENCES</span>
+      </a>
+      <a class="menu__item" href="#">
+        <span class="menu__item-name">PORTOFOLIO</span>
+      </a>
+
+    </nav>
+
+    <header>
+
     </header>
 
-    <section class="section1">
-      Bio
 
-    </section>
+
+
+    <section class="section1">
+
+
+     <h1>Quel est ton parcours ?</h1>
+
+      <p><h3> Depuis toujours j’ai voulu monter mon entreprise, j’ai de ce fait orienté mes choix d’études en visant cet objectif.
+      Tout d’abord, j’ai choisi de passer un bac STG Comptabilité et Finance, ensuite un BTS Communication / marketing / management. Après ces études j’ai voulu me tourner vers quelque chose de plus humaniste, tourné vers l’art et l’esthétique, sans perdre l’aspect communication qui est essentiel dans notre monde actuel.
+      J’ai donc choisi d’intégrer IPESAA en passant par la MANAA motivé par
+      le BTS Design Graphique. J’ai pu en parallèle participer à la création d’une
+      agence de communication, et ainsi travailler pour des clients réels et
+      participer à des appels d’offres.</h3></p>
+
+      <h1>Quel est ton orientation aujourd'hui ?</h1>
+
+      <p><h3> J'ai un plaisir tout particulier à travailler avec le monde culturelle et
+        l'urbanisme. Pour moi l'essentielle de notre avenir repose sur ces deux choses. Le culturelle
+        représentant l'éducation, l'histoire, l'avenir, l'art. L'urbanisme représente notre condition de vie.
+        Nos villes nous déterminent.</h3></p>
+
+      </section>
+
     <section class="section2">
-      compétences
+      <h1>Quel est ton parcours ?</h1>
+
+       <p><h3> Depuis toujours j’ai voulu monter mon entreprise, j’ai de ce fait orienté mes choix d’études en visant cet objectif.
+       Tout d’abord, j’ai choisi de passer un bac STG Comptabilité et Finance, ensuite un BTS Communication / marketing / management. Après ces études j’ai voulu me tourner vers quelque chose de plus humaniste, tourné vers l’art et l’esthétique, sans perdre l’aspect communication qui est essentiel dans notre monde actuel.
+       J’ai donc choisi d’intégrer IPESAA en passant par la MANAA motivé par
+       le BTS Design Graphique. J’ai pu en parallèle participer à la création d’une
+       agence de communication, et ainsi travailler pour des clients réels et
+       participer à des appels d’offres.</h3></p>
+
+       <h1>Quel est ton orientation aujourd'hui ?</h1>
+
+       <p><h3> J'ai un plaisir tout particulier à travailler avec le monde culturelle et
+         l'urbanisme. Pour moi l'essentielle de notre avenir repose sur ces deux choses. Le culturelle
+         représentant l'éducation, l'histoire, l'avenir, l'art. L'urbanisme représente notre condition de vie.
+         Nos villes nous déterminent.</h3></p>
 
     </section>
     <section class="section3">
       portfolio
 
     </section>
-    <footer> contact infos</footer>
-  </body>
+
+    <footer>
+
+    <ul class="Linklist">
+      <li><a href="https://www.instagram.com/yannespinasse/">Instagram</a></li>
+        <li><a href="http://www.ecv.fr">This is a link</a></li>
+          <li><a href="http://www.ecv.fr">This is a link</a></li>
+            <li><a href="http://www.ecv.fr">This is a link</a></li>
+    </ul>
+
+    </footer>
+
+    <div class="infos">
+      <div class="containerinfos">
+
+    <h1>yannespinasse0@gmail.com</h1>
+    <p>0656743454</p>
+
+    </div>
+    </div>
+
+
 </html>
